--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "node": ">= 12.0.0"
   },
   "dependencies": {
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "telebot": "^1.4.1"
   },
   "devDependencies": {
-    "ava": "^3.5.0",
+    "ava": "^4.3.1",
     "eslint": "^6.8.0"
   },
   "scripts": {
